@@ -1,5 +1,6 @@
 Changes for 1.4.3:
 
+ - fixed PostgreSQL error in synchronization of graphs (Alexei)
  - minor grammar fixes (Alexei)
  - fixed compilation of ZABBIX agent under Mac OS/X (Alexei)
  - fixed memory leak when processing non-existant trapper item (Alexei)
